<resources>
    <string name="app_name">UGD4_9590_E</string>
    <string name="title_main">List Of Employee</string>
    <string name="full_name">Input Full Name</string>
    <string name="number">Input Number</string>
    <string name="age">Input Age</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_title">Add Employee</string>
    <string name="update_employee">Update Employee</string>
</resources>